python-debian (0.1.23) UNRELEASED; urgency=medium

  * Add sha512 sums to Release and Sources (Closes: #732599).
  * Use warnings rather than stderr in PkgRelation (Closes: #712513).
  * Expose the list of bugs closed by a changelog entry; thanks to Jelmer Vernooi
    and Stefano Rivera for patches (Closes: #634848).
  * Add support for .deb with uncompressed data.tar member (Closes: #718355).
  * Prefer the internal parser rather than apt's TagFile for processing deb822
    files unless explicitly called to process Packages or Sources files:
    - prevents paragraph parsing truncating on comments (Closes: #743174).
    - fix parsing of paragraphs when separated by more whitespace than just a
      newline (Closes: #655988). (Finally fixing interactions with devscripts'
      wrap-and-sort!)
  * Parse foreign architecture (package:any) relationships and also other
    multi-arch related relationships (Closes: #670679)
  * Parse build-profiles syntax.

 -- Stuart Prescott <stuart@debian.org>  Fri, 13 Jun 2014 00:27:59 +1000

python-debian (0.1.22) unstable; urgency=low

  [ John Wright ]
  * Acknowledge NMUs.  (Thanks for your work, Colin and Fathi!)
  * arfile.ArFile.extractfile: Return a matching member even if it is
    not the first one in the archive.  Thanks to Mika Eloranta for the
    report and patch. (Closes: #689313)
  * deb822.Deb822.iter_paragraphs: Actually work with string input.
    Thanks to Stefano Rivera for the patch. (Closes: #647455)

  [ Stuart Prescott ]
  * Add myself to Uploaders.
  * Change Vcs-* URLs to canonical locations.
  * Switch build system to short form dh and pybuild.
  * Use nose to run test suite.
  * Add autopkgtest test suite.

  [ John Wright ]
  * python_support: Avoid hashlib dependency, using the built-in _sha or
    _sha1 module (depending on Python version) instead.  That way we
    don't link in OpenSSL, which has an incompatible license.
    (Closes: 747031)
